# generate-project-readme-using-langgraph

./: Makefile  README.md  pyproject.toml  repolinter.json  requirements.in  requirements.txt
src/rdmgen/: constants.py  main.py
src/rdmgen/agent_components/: graph.py  graph_elements.py  prompts.py  state.py  tools.py
src/rdmgen/utils/: bedrock_utils.py  callback_handler.py  custom_parsers.py
test_data/hello_world/: README.md
test_data/sensor_extraction/: README.md  app.py  stack.py
